--- a/SpikaEnterprise/res/layout/activity_login.xml
+++ b/SpikaEnterprise/res/layout/activity_login.xml
@@ -52,7 +52,9 @@
                 android:layout_toRightOf="@+id/usernameImg"
                 android:background="@null"
                 android:hint="@string/username"
-                android:paddingLeft="5dp" />
+                android:maxLines="1"
+                android:paddingLeft="5dp"
+                android:singleLine="true" />
 
             <View
                 android:id="@+id/bottomLine"
@@ -86,7 +88,9 @@
                 android:background="@null"
                 android:hint="@string/password"
                 android:inputType="textPassword"
-                android:paddingLeft="5dp" />
+                android:maxLines="1"
+                android:paddingLeft="5dp"
+                android:singleLine="true" />
 
             <View
                 android:id="@+id/bottomLinePass"
@@ -102,7 +106,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:checked="true"
-            android:text="@string/login_remember_me"/>
+            android:text="@string/login_remember_me" />
 
         <com.clover.spika.enterprise.chat.views.RobotoThinButton
             android:id="@+id/loginBtn"
@@ -113,11 +117,11 @@
             android:layout_marginTop="20dp"
             android:background="@drawable/selector_green"
             android:gravity="center"
+            android:onClick="onLoginClick"
             android:padding="10dp"
             android:text="@string/login_big"
             android:textColor="@android:color/white"
-            android:textSize="20sp"
-            android:onClick="onLoginClick"/>
+            android:textSize="20sp" />
     </LinearLayout>
 
 </RelativeLayout>
