--- a/SpikaEnterprise/res/layout/item_chat_main.xml
+++ b/SpikaEnterprise/res/layout/item_chat_main.xml
@@ -120,7 +120,9 @@
                 android:id="@+id/meMsgContent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:autoLink="all"
                 android:gravity="right"
+                android:linksClickable="true"
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
 
@@ -199,7 +201,9 @@
                 android:id="@+id/youMsgContent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:autoLink="all"
                 android:gravity="left"
+                android:linksClickable="true"
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
 
