--- a/SpikaEnterprise/res/layout/activity_camera_crop.xml
+++ b/SpikaEnterprise/res/layout/activity_camera_crop.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/default_blue" >
 
-    <TextView
+    <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
         android:id="@+id/topText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -84,10 +84,13 @@
             android:layout_gravity="center"
             android:layout_marginBottom="15dp"
             android:layout_weight="0.7"
+            android:background="@drawable/selector_transp_blue"
+            android:clickable="true"
             android:gravity="center_horizontal"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:padding="5dp" >
 
-            <TextView
+            <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
@@ -116,10 +119,13 @@
             android:layout_gravity="center"
             android:layout_marginBottom="15dp"
             android:layout_weight="0.7"
+            android:background="@drawable/selector_transp_blue"
+            android:clickable="true"
             android:gravity="center_horizontal"
-            android:orientation="vertical" >
+            android:orientation="vertical"
+            android:padding="5dp" >
 
-            <TextView
+            <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
