--- a/SpikaEnterprise/res/layout/activity_chat.xml
+++ b/SpikaEnterprise/res/layout/activity_chat.xml
@@ -65,6 +65,16 @@
             android:scrollingCache="false"
             android:smoothScrollbar="true" />
 
+        <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
+            android:id="@+id/noItems"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/no_items"
+            android:textColor="@color/default_blue"
+            android:textSize="30sp"
+            android:visibility="gone" />
+
         <RelativeLayout
             android:id="@+id/chatLayout"
             android:layout_width="match_parent"
@@ -98,13 +108,13 @@
                 android:padding="5dp"
                 android:singleLine="true" />
         </RelativeLayout>
-        
+
         <RelativeLayout
             android:id="@+id/rlDrawer"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:visibility="gone"
-            android:layout_alignParentBottom="true" >
+            android:layout_alignParentBottom="true"
+            android:visibility="gone" >
 
             <LinearLayout
                 android:layout_width="match_parent"
