--- a/SpikaEnterprise/res/layout/activity_location.xml
+++ b/SpikaEnterprise/res/layout/activity_location.xml
@@ -11,27 +11,45 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="#66000000"
-        android:orientation="vertical"
-        android:padding="10dp" >
+        android:layout_height="@dimen/menu_height"
+        android:background="@color/default_blue"
+        android:orientation="vertical" >
 
-        <com.clover.spika.enterprise.chat.views.RobotoThinEditText
+        <ImageButton
+            android:id="@+id/goBack"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/selector_transp_blue"
+            android:contentDescription="@null"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:src="@drawable/btn_back" />
+
+        <com.clover.spika.enterprise.chat.views.RobotoThinTextView
             android:id="@+id/locationAddress"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
             android:layout_toLeftOf="@+id/sendLocation"
-            android:textColor="@color/white" />
+            android:layout_toRightOf="@+id/goBack"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxLines="1"
+            android:singleLine="true"
+            android:textColor="@color/white"
+            android:textSize="20sp" />
 
         <ImageButton
             android:id="@+id/sendLocation"
-            android:layout_width="54dp"
-            android:layout_height="54dp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@drawable/selector_transp_blue"
             android:contentDescription="@null"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:scaleType="centerInside"
             android:src="@android:drawable/ic_menu_send" />
     </RelativeLayout>
