--- a/SpikaEnterprise/res/layout/activity_passcode.xml
+++ b/SpikaEnterprise/res/layout/activity_passcode.xml
@@ -1,74 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/default_blue"
-    android:padding="16dp">
+    android:padding="16dp" >
 
     <ImageButton
         android:id="@+id/goBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/btn_back"
         android:background="@null"
         android:contentDescription="@null"
         android:onClick="exitActivity"
+        android:src="@drawable/btn_back"
         android:visibility="gone"
-        tools:visibility="visible"/>
+        tools:visibility="visible" />
 
     <LinearLayout
         android:id="@+id/linear_layout_characters_in_passcode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_below="@id/goBack"
-        android:orientation="horizontal">
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal" >
 
         <View
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_margin="15dp"
-            android:background="@drawable/circle_with_white_border"/>
+            android:background="@drawable/circle_with_white_border" />
 
         <View
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_margin="15dp"
-            android:background="@drawable/circle_with_white_border"/>
+            android:background="@drawable/circle_with_white_border" />
 
         <View
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_margin="15dp"
-            android:background="@drawable/circle_with_white_border"/>
+            android:background="@drawable/circle_with_white_border" />
 
         <View
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_margin="15dp"
-            android:background="@drawable/circle_with_white_border"/>
-
+            android:background="@drawable/circle_with_white_border" />
     </LinearLayout>
 
     <Space
         android:id="@+id/space_bottom"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:layout_alignParentBottom="true"/>
+        android:layout_alignParentBottom="true" />
 
     <GridLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_above="@id/space_bottom"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:columnCount="3"
-        android:useDefaultMargins="true">
+        android:useDefaultMargins="true" >
 
-        <Button
+        <com.clover.spika.enterprise.chat.views.RobotoThinButton
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:layout_gravity="fill"
@@ -79,7 +76,7 @@
             android:textColor="@color/white_selector"
             android:textSize="45sp" />
 
-        <Button
+        <com.clover.spika.enterprise.chat.views.RobotoThinButton
             android:layout_width="75dp"
             android:layout_columnSpan="1"
             android:layout_gravity="fill"
@@ -90,7 +87,7 @@
             android:textColor="@color/white_selector"
             android:textSize="45sp" />
 
-        <Button
+        <com.clover.spika.enterprise.chat.views.RobotoThinButton
             android:layout_width="75dp"
             android:layout_columnSpan="1"
             android:layout_gravity="fill"
@@ -101,7 +98,7 @@
             android:textColor="@color/white_selector"
             android:textSize="45sp" />
 
-        <Button
+        <com.clover.spika.enterprise.chat.views.RobotoThinButton
             android:layout_height="75dp"
             android:layout_columnSpan="1"
             android:layout_gravity="fill"
@@ -112,7 +109,7 @@
             android:textColor="@color/white_selector"
             android:textSize="45sp" />
 
-        <Button
+        <com.clover.spika.enterprise.chat.views.RobotoThinButton
             android:layout_columnSpan="1"
             android:layout_gravity="fill"
             android:background="@drawable/circle_with_white_border"
@@ -122,7 +119,7 @@
             android:textColor="@color/white_selector"
             android:textSize="45sp" />
 
-        <Button
+        <com.clover.spika.enterprise.chat.views.RobotoThinButton
             android:layout_columnSpan="1"
             android:layout_gravity="fill"
             android:background="@drawable/circle_with_white_border"
@@ -132,7 +129,7 @@
             android:textColor="@color/white_selector"
             android:textSize="45sp" />
 
-        <Button
+        <com.clover.spika.enterprise.chat.views.RobotoThinButton
             android:layout_height="75dp"
             android:layout_columnSpan="1"
             android:layout_gravity="fill"
@@ -143,7 +140,7 @@
             android:textColor="@color/white_selector"
             android:textSize="45sp" />
 
-        <Button
+        <com.clover.spika.enterprise.chat.views.RobotoThinButton
             android:layout_columnSpan="1"
             android:layout_gravity="fill"
             android:background="@drawable/circle_with_white_border"
@@ -153,7 +150,7 @@
             android:textColor="@color/white_selector"
             android:textSize="45sp" />
 
-        <Button
+        <com.clover.spika.enterprise.chat.views.RobotoThinButton
             android:layout_columnSpan="1"
             android:layout_gravity="fill"
             android:background="@drawable/circle_with_white_border"
@@ -163,7 +160,7 @@
             android:textColor="@color/white_selector"
             android:textSize="45sp" />
 
-        <Button
+        <com.clover.spika.enterprise.chat.views.RobotoThinButton
             android:layout_height="75dp"
             android:layout_columnSpan="1"
             android:layout_gravity="fill"
@@ -174,7 +171,7 @@
             android:textColor="@color/white_selector"
             android:textSize="20sp" />
 
-        <Button
+        <com.clover.spika.enterprise.chat.views.RobotoThinButton
             android:layout_columnSpan="1"
             android:layout_gravity="fill"
             android:background="@drawable/circle_with_white_border"
@@ -183,7 +180,6 @@
             android:text="0"
             android:textColor="@color/white_selector"
             android:textSize="45sp" />
-
     </GridLayout>
 
 </RelativeLayout>
