--- a/SpikaEnterprise/res/layout/activity_record_video.xml
+++ b/SpikaEnterprise/res/layout/activity_record_video.xml
@@ -24,6 +24,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:layout_toLeftOf="@+id/sendVideo"
+            android:layout_toRightOf="@+id/goBack"
             android:text="@string/video"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
