--- a/SpikaEnterprise/res/layout/activity_users_list.xml
+++ b/SpikaEnterprise/res/layout/activity_users_list.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/white" >
 
     <RelativeLayout
         android:id="@+id/actionBarLayout"
@@ -29,32 +29,31 @@
             android:text="@string/users"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
-        
+
         <ImageButton
             android:id="@+id/searchBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:background="@drawable/selector_transp_blue"
             android:contentDescription="@null"
             android:padding="10dp"
             android:scaleType="centerInside"
-            android:src="@drawable/icon_search"
-             />
-        
-        <EditText android:id="@+id/searchEt"
+            android:src="@drawable/icon_search" />
+
+        <EditText
+            android:id="@+id/searchEt"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_toRightOf="@id/sidebarBtn"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp" 
-            android:textColor="@color/white"
+            android:layout_marginRight="10dp"
+            android:layout_toRightOf="@id/sidebarBtn"
             android:imeOptions="actionSearch"
+            android:inputType="text"
             android:singleLine="true"
-            android:visibility="gone"
-            android:inputType="text"/> 
-
+            android:textColor="@color/white"
+            android:visibility="gone" />
     </RelativeLayout>
 
     <com.clover.spika.enterprise.chat.views.pulltorefresh.PullToRefreshListView
@@ -69,22 +68,14 @@
         android:listSelector="@color/transparent"
         android:scrollbars="none" />
 
-    <RelativeLayout
-        android:id="@+id/noItemsLayout"
-        android:layout_width="match_parent"
+    <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
+        android:id="@+id/noItems"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/actionBarLayout"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="20dp" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/no_profiles"
-            android:textColor="@color/white"
-            android:textSize="15sp"
-            android:textStyle="bold" />
-    </RelativeLayout>
+        android:layout_centerInParent="true"
+        android:text="@string/no_items"
+        android:textColor="@color/default_blue"
+        android:textSize="30sp"
+        android:visibility="gone" />
 
 </RelativeLayout>
