--- a/SpikaEnterprise/res/values/color.xml
+++ b/SpikaEnterprise/res/values/color.xml
@@ -28,6 +28,7 @@
     <!-- Enterprise style -->
     <color name="default_blue">#3E92D7</color>
     <color name="default_blue_light">#74B1E2</color>
+    <color name="default_blue_light_trans">#803E92D7</color>
     <color name="default_green">#57D171</color>
     <color name="default_green_light">#61E680</color>
     <color name="trans">#00000000</color>
