--- a/SpikaEnterprise/res/layout/activity_passcode.xml
+++ b/SpikaEnterprise/res/layout/activity_passcode.xml
@@ -3,16 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/default_blue"
-    android:padding="16dp" >
+    android:background="@color/default_blue" >
 
     <ImageButton
         android:id="@+id/goBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@null"
+        android:background="@drawable/selector_transp_blue"
         android:contentDescription="@null"
         android:onClick="exitActivity"
+        android:padding="20dp"
         android:src="@drawable/btn_back"
         android:visibility="gone"
         tools:visibility="visible" />
@@ -23,7 +23,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/goBack"
         android:layout_centerHorizontal="true"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:padding="16dp" >
 
         <View
             android:layout_width="25dp"
@@ -63,6 +64,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:columnCount="3"
+        android:padding="16dp"
         android:useDefaultMargins="true" >
 
         <com.clover.spika.enterprise.chat.views.RobotoThinButton
