--- a/SpikaEnterprise/res/layout/activity_record_video.xml
+++ b/SpikaEnterprise/res/layout/activity_record_video.xml
@@ -23,6 +23,7 @@
             android:id="@+id/screenTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:layout_centerInParent="true"
             android:layout_toLeftOf="@+id/sendVideo"
             android:layout_toRightOf="@+id/goBack"
