--- a/SpikaEnterprise/res/layout/activity_chat.xml
+++ b/SpikaEnterprise/res/layout/activity_chat.xml
@@ -181,16 +181,18 @@
                     android:weightSum="3" >
 
                     <Button
-                        android:id="@+id/bntEmoji"
+                        android:id="@+id/bntFile"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_marginBottom="5dp"
-                        android:layout_marginLeft="5dp"
+                        android:layout_marginLeft="3dp"
                         android:layout_marginRight="2dp"
                         android:layout_weight="1"
                         android:background="@drawable/more_square_bg"
+                        android:drawableTop="@drawable/selector_send_file"
                         android:paddingTop="20dp"
-                        android:visibility="invisible" />
+                        android:text="@string/file_download"
+                        android:textColor="@android:color/black" />
 
                     <Button
                         android:id="@+id/btnLocation"
