--- a/SpikaEnterprise/res/layout/item_chat_main.xml
+++ b/SpikaEnterprise/res/layout/item_chat_main.xml
@@ -156,6 +156,37 @@
                 android:layout_height="100dp"
                 android:layout_gravity="right"
                 android:contentDescription="@null" />
+
+            <RelativeLayout
+                android:id="@+id/meFileLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
+                    android:id="@+id/meFileName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/meDownloadFile"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignTop="@+id/meDownloadFile"
+                    android:layout_toLeftOf="@+id/meDownloadFile"
+                    android:ellipsize="end"
+                    android:gravity="right|center_vertical"
+                    android:maxLines="1"
+                    android:padding="5dp"
+                    android:singleLine="true"
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp" />
+
+                <ImageView
+                    android:id="@+id/meDownloadFile"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_alignParentRight="true"
+                    android:contentDescription="@null"
+                    android:src="@drawable/icon_file" />
+            </RelativeLayout>
         </LinearLayout>
 
         <!-- end: Me message layout -->
@@ -237,6 +268,37 @@
                 android:layout_height="100dp"
                 android:layout_gravity="left"
                 android:contentDescription="@null" />
+
+            <RelativeLayout
+                android:id="@+id/youFileLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+                <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
+                    android:id="@+id/youFileName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/youDownloadFile"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignTop="@+id/youDownloadFile"
+                    android:layout_toRightOf="@+id/youDownloadFile"
+                    android:ellipsize="end"
+                    android:gravity="left|center_vertical"
+                    android:maxLines="1"
+                    android:padding="5dp"
+                    android:singleLine="true"
+                    android:textColor="@android:color/black"
+                    android:textSize="20sp" />
+
+                <ImageView
+                    android:id="@+id/youDownloadFile"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_alignParentLeft="true"
+                    android:contentDescription="@null"
+                    android:src="@drawable/icon_file" />
+            </RelativeLayout>
         </LinearLayout>
 
         <!-- end: You message layout -->
