Sidebar lag partially fixed

--- a/SpikaEnterprise/res/layout/dialog_failed.xml
+++ b/SpikaEnterprise/res/layout/dialog_failed.xml
@@ -44,7 +44,8 @@
                 android:layout_below="@id/failedDescription"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
-                android:orientation="vertical" >
+                android:orientation="vertical"
+                android:padding="10dp" >
 
                 <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
                     android:layout_width="wrap_content"
