--- a/SpikaEnterprise/res/layout/fragment_lobby.xml
+++ b/SpikaEnterprise/res/layout/fragment_lobby.xml
@@ -1,27 +1,40 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white" >
+    android:background="@android:color/white"
+    android:orientation="vertical" >
 
-    <com.clover.spika.enterprise.chat.views.pulltorefresh.PullToRefreshListView
-        android:id="@+id/mainListView"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white"
-        android:divider="@null"
-        android:dividerHeight="0dp"
-        android:fadingEdge="none"
-        android:listSelector="@color/transparent"
-        android:scrollbars="none" />
+        android:layout_height="50dp"
+        android:background="@color/default_blue"
+        android:orientation="horizontal" >
 
-    <com.clover.spika.enterprise.chat.views.RobotoRegularTextView
-        android:id="@+id/noItems"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/no_items"
-        android:textColor="@color/default_blue"
-        android:textSize="30sp"
-        android:visibility="invisible" />
+        <ToggleButton
+            android:id="@+id/groupsTab"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/selector_toggle_tab"
+            android:textColor="@drawable/selector_tab_toggle"
+            android:textOff="Users"
+            android:textOn="Users" />
 
-</FrameLayout>
+        <ToggleButton
+            android:id="@+id/usersTab"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/selector_toggle_tab"
+            android:textColor="@drawable/selector_tab_toggle"
+            android:textOff="Groups"
+            android:textOn="Groups" />
+    </LinearLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+    </android.support.v4.view.ViewPager>
+
+</LinearLayout>
