sidebar closed listener added to fragments

--- a/SpikaEnterprise/res/layout/sidebar_layout.xml
+++ b/SpikaEnterprise/res/layout/sidebar_layout.xml
@@ -27,6 +27,7 @@
             <com.clover.spika.enterprise.chat.views.RoundImageView
                 android:id="@+id/userImage"
                 android:layout_width="match_parent"
+                android:src="@drawable/default_user_image"
                 android:layout_height="match_parent"
                 android:contentDescription="@null" />
         </RelativeLayout>
