--- a/SpikaEnterprise/res/layout/fragment_profile.xml
+++ b/SpikaEnterprise/res/layout/fragment_profile.xml
@@ -12,7 +12,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:background="@drawable/circle_with_white_border"
-        tools:src="@drawable/white_circle" />
+        tools:src="@drawable/@drawable/default_user_image" />
 
     <ImageView
         android:id="@+id/addPhoto"
