--- a/SpikaEnterprise/res/layout/activity_chat.xml
+++ b/SpikaEnterprise/res/layout/activity_chat.xml
@@ -237,4 +237,23 @@
         </RelativeLayout>
     </RelativeLayout>
 
+    <ListView
+        android:id="@+id/settings_list_view"
+        android:layout_width="200dp"
+        android:layout_height="150dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/actionBarLayout"
+        android:animationCache="false"
+        android:background="@color/baloon_blue"
+        android:cacheColorHint="#00000000"
+        android:divider="@color/default_blue"
+        android:dividerHeight="0.1dp"
+        android:fadingEdge="none"
+        android:listSelector="@color/transparent"
+        android:scrollbars="none"
+        android:scrollingCache="false"
+        android:smoothScrollbar="true"
+        android:visibility="gone" />
+
 </RelativeLayout>
