--- a/SpikaEnterprise/res/layout/activity_chat.xml
+++ b/SpikaEnterprise/res/layout/activity_chat.xml
@@ -26,8 +26,9 @@
             android:layout_toLeftOf="@+id/partnerIcon"
             android:layout_toRightOf="@+id/goBack"
             android:ellipsize="end"
-            android:gravity="center"
+            android:gravity="right"
             android:maxLines="1"
+            android:text="Matej Vida"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
 
@@ -48,8 +49,8 @@
             android:layout_centerVertical="true"
             android:background="@null"
             android:contentDescription="@null"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
             android:src="@drawable/selector_settings_button" />
     </RelativeLayout>
 
@@ -240,20 +241,20 @@
     <ListView
         android:id="@+id/settings_list_view"
         android:layout_width="200dp"
-        android:layout_height="150dp"
+        android:layout_height="243dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/actionBarLayout"
         android:animationCache="false"
-        android:background="@color/baloon_blue"
-        android:cacheColorHint="#00000000"
-        android:divider="@color/default_blue"
-        android:dividerHeight="0.1dp"
+        android:background="@color/chat_settings_gray"
+        android:cacheColorHint="@color/chat_settings_gray"
+        android:divider="@color/chat_settings_separator"
+        android:dividerHeight="0.5dp"
         android:fadingEdge="none"
-        android:listSelector="@color/transparent"
-        android:scrollbars="none"
+        android:listSelector="@color/gray_in_adapter"
+        android:scrollbars="vertical"
         android:scrollingCache="false"
         android:smoothScrollbar="true"
-        android:visibility="gone" />
+        android:visibility="invisible" />
 
 </RelativeLayout>
