--- a/SpikaEnterprise/res/layout/item_chat_settings.xml
+++ b/SpikaEnterprise/res/layout/item_chat_settings.xml
@@ -2,16 +2,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
 
-    <com.clover.spika.enterprise.chat.views.RobotoThinTextView
+    <TextView
         android:id="@+id/settings_item"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:ellipsize="end"
         android:gravity="center"
         android:maxLines="1"
-        android:padding="10dp"
         android:singleLine="true"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/black"
         android:textSize="20sp" />
 
 </RelativeLayout>
