--- a/SpikaEnterprise/res/layout/activity_chat.xml
+++ b/SpikaEnterprise/res/layout/activity_chat.xml
@@ -26,9 +26,8 @@
             android:layout_toLeftOf="@+id/partnerIcon"
             android:layout_toRightOf="@+id/goBack"
             android:ellipsize="end"
-            android:gravity="right"
+            android:gravity="center"
             android:maxLines="1"
-            android:text="Matej Vida"
             android:textColor="@android:color/white"
             android:textSize="20sp" />
 
@@ -43,14 +42,17 @@
         <ImageButton
             android:id="@+id/settingsBtn"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="45dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@null"
             android:contentDescription="@null"
+            android:paddingBottom="10dp"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
+            android:paddingTop="10dp"
+            android:scaleType="centerInside"
             android:src="@drawable/selector_settings_button" />
     </RelativeLayout>
 
