--- a/SpikaEnterprise/res/layout/activity_chat_members.xml
+++ b/SpikaEnterprise/res/layout/activity_chat_members.xml
@@ -30,7 +30,7 @@
             android:textSize="20sp" />
     </RelativeLayout>
 
-    <ListView
+    <com.clover.spika.enterprise.chat.views.pulltorefresh.PullToRefreshListView
         android:id="@+id/main_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
