--- a/SpikaEnterprise/res/layout/activity_passcode.xml
+++ b/SpikaEnterprise/res/layout/activity_passcode.xml
@@ -14,14 +14,24 @@
         android:onClick="exitActivity"
         android:padding="20dp"
         android:src="@drawable/btn_back"
-        android:visibility="gone"
+        android:visibility="invisible"
         tools:visibility="visible" />
 
+    <com.clover.spika.enterprise.chat.views.RobotoThinTextView 
+        android:id="@+id/description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:layout_below="@id/goBack"
+        android:textSize="20sp"
+        android:textColor="@color/white"
+        android:text="dummy text"/>
+    
     <LinearLayout
         android:id="@+id/linear_layout_characters_in_passcode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/goBack"
+        android:layout_below="@id/description"
         android:layout_centerHorizontal="true"
         android:orientation="horizontal"
         android:padding="16dp" >
