--- a/SpikaEnterprise/res/layout/activity_chat.xml
+++ b/SpikaEnterprise/res/layout/activity_chat.xml
@@ -243,7 +243,7 @@
     <ListView
         android:id="@+id/settings_list_view"
         android:layout_width="200dp"
-        android:layout_height="243dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/actionBarLayout"
