--- a/SpikaEnterprise/res/layout/item_chat_main.xml
+++ b/SpikaEnterprise/res/layout/item_chat_main.xml
@@ -310,6 +310,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="#00ff00"
+        android:layout_marginLeft="10dp"
         android:textSize="13sp"
         android:visibility="visible"/>
 
