--- a/SpikaEnterprise/res/layout/activity_base.xml
+++ b/SpikaEnterprise/res/layout/activity_base.xml
@@ -41,6 +41,20 @@
             android:src="@drawable/icon_search"
             android:visibility="gone" />
 
+        <ImageButton 
+            android:id="@+id/close_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:background="@drawable/selector_transp_blue"
+            android:contentDescription="@null"
+            android:padding="10dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/btn_back"
+            android:layout_alignParentRight="true"
+            android:visibility="gone"
+            />
+        
         <EditText
             android:id="@+id/searchEt"
             android:layout_width="match_parent"
@@ -48,11 +62,14 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_toRightOf="@id/sidebarBtn"
+            android:layout_toLeftOf="@id/close_search"
             android:imeOptions="actionSearch"
             android:inputType="text"
             android:singleLine="true"
             android:textColor="@color/white"
             android:visibility="gone" />
+        
+        
     </RelativeLayout>
 
     <FrameLayout
