Small bugs fixed

--- a/SpikaEnterprise/res/layout/activity_invite_people.xml
+++ b/SpikaEnterprise/res/layout/activity_invite_people.xml
@@ -12,9 +12,8 @@
         <ImageButton
             android:id="@+id/goBack"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:background="@drawable/selector_transp_blue"
             android:contentDescription="@null"
             android:padding="10dp"
@@ -33,7 +32,6 @@
             android:id="@+id/searchBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@drawable/selector_transp_blue"
@@ -43,14 +41,27 @@
             android:src="@drawable/icon_search"
             android:visibility="visible" />
 
+        <ImageButton
+            android:id="@+id/close_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/selector_transp_blue"
+            android:contentDescription="@null"
+            android:padding="10dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/btn_back"
+            android:visibility="gone" />
+
         <EditText
             android:id="@+id/searchEt"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_toEndOf="@id/sidebarBtn"
-            android:layout_toRightOf="@id/sidebarBtn"
+            android:layout_toLeftOf="@id/close_search"
+            android:layout_toRightOf="@id/goBack"
             android:imeOptions="actionSearch"
             android:inputType="text"
             android:singleLine="true"
