--- a/SpikaEnterprise/res/layout/activity_main.xml
+++ b/SpikaEnterprise/res/layout/activity_main.xml
@@ -41,35 +41,32 @@
             android:src="@drawable/icon_search"
             android:visibility="gone" />
 
-        <ImageButton 
+        <ImageButton
             android:id="@+id/close_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@drawable/selector_transp_blue"
             android:contentDescription="@null"
             android:padding="10dp"
             android:scaleType="centerInside"
             android:src="@drawable/btn_back"
-            android:layout_alignParentRight="true"
-            android:visibility="gone"
-            />
-        
+            android:visibility="gone" />
+
         <EditText
             android:id="@+id/searchEt"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_toRightOf="@id/sidebarBtn"
             android:layout_toLeftOf="@id/close_search"
+            android:layout_toRightOf="@id/sidebarBtn"
             android:imeOptions="actionSearch"
             android:inputType="text"
             android:singleLine="true"
             android:textColor="@color/white"
             android:visibility="gone" />
-        
-        
     </RelativeLayout>
 
     <FrameLayout
