push no name fix (seen by push), started added textview

--- a/SpikaEnterprise/res/layout/activity_invite_people.xml
+++ b/SpikaEnterprise/res/layout/activity_invite_people.xml
@@ -1,7 +1,8 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/baseLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
     <RelativeLayout
         android:id="@+id/actionBarLayout"
@@ -96,11 +97,18 @@
             android:visibility="gone" />
     </RelativeLayout>
 
+    <TextView
+        android:id="@+id/invitedPeople"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:textColor="@color/text_time_gray"
+        android:textSize="12sp" />
+
     <com.clover.spika.enterprise.chat.views.pulltorefresh.PullToRefreshListView
         android:id="@+id/main_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/actionBarLayout"
         android:animationCache="false"
         android:background="@color/transparent"
         android:cacheColorHint="#00000000"
@@ -112,4 +120,4 @@
         android:scrollingCache="false"
         android:smoothScrollbar="true" />
 
-</RelativeLayout>
+</LinearLayout>
