--- a/SpikaEnterprise/res/values/color.xml
+++ b/SpikaEnterprise/res/values/color.xml
@@ -2,6 +2,7 @@
 
     <color name="transparent">#00000000</color>
     <color name="black">#000000</color>
+    <color name="black_shadow_transparent">#55000000</color>
     <color name="white">#ffffffff</color>
     <color name="text_blue">#52bbe2</color>
     <color name="green">#71d654</color>
